--- a/_config.yml
+++ b/_config.yml
@@ -236,14 +236,15 @@ defaults:
       author_profile: true
       share: true
       comment: true
-  # _talks
-  #- scope:
-  #    path: ""
-  #    type: talks
-  #  values:
-  #    layout: talk
-  #    author_profile: true
-  #    share: true
+   _talks
+  - scope:
+      path: ""
+      type: talks
+    values:
+      #layout: talk
+      layout: null
+      author_profile: false
+      share: false
 
 # Sass/SCSS
 sass:
