--- a/_config.yml
+++ b/_config.yml
@@ -242,9 +242,8 @@ defaults:
       type: talks
     values:
       layout: talk
-      #layout: null
-      author_profile: false
-      share: false
+      author_profile: true
+      share: true
 
 # Sass/SCSS
 sass:
