--- a/_config.yml
+++ b/_config.yml
@@ -236,14 +236,14 @@ defaults:
       author_profile: true
       share: true
       comment: true
-   _talks
+  # _talks
   - scope:
       path: ""
       type: talks
     values:
-      layout: talk
-      author_profile: true
-      share: true
+      layout: null       #layout: talk
+      author_profile: false
+      share: false
 
 # Sass/SCSS
 sass:
