--- a/_config.yml
+++ b/_config.yml
@@ -123,6 +123,7 @@ include:
   - _pages
   - files
 exclude:
+  - _pages/talks.html
   - "*.sublime-project"
   - "*.sublime-workspace"
   - .asset-cache
