--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr. David Hilpert"
-  avatar           : "_KM_6339_profile.jpg" #"profile.png"
+  avatar           : "images/profile_pic.png" #"profile.png"
   bio              : "Data Scientist"
   location         : "Braunschweig, Germany"
   employer         :
