--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/davidhilpert"
+  github           : "davidhilpert"
   google_plus      :
   keybase          :
   instagram        :
@@ -181,9 +181,9 @@ collections:
   #publications:
   #  output: true
   #  permalink: /:collection/:path/
-  #portfolio:
-  #  output: true
-  #  permalink: /:collection/:path/
+  portfolio:
+    output: true
+    permalink: /:collection/:path/
   #talks:
   #  output: false
   #  permalink: /:collection/:path/
@@ -230,15 +230,15 @@ defaults:
   #    author_profile: true
   #    share: true
   #    comments: true
-  ## _portfolio
-  #- scope:
-  #    path: ""
-  #    type: portfolio
-  #  values:
-  #    layout: single
-  #    author_profile: true
-  #    share: true
-  #    comment: true
+  # _portfolio
+  - scope:
+      path: ""
+      type: portfolio
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true
   ## _talks
   #- scope:
   #    path: ""
