--- a/_config.yml
+++ b/_config.yml
@@ -102,14 +102,14 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.com/in/david-hilpert-363208135/"
   orcid            : "https://orcid.org/0000-0002-1996-338X"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "@hilperts_david"
+  twitter          : #"@hilperts_david"
   vine             :
   weibo            :
   xing             :
